feat: đồng bộ sổ địa chỉ API, README và chỉnh profile/cart/checkout